k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: links
spec:
  ingressClassName: traefik
  rules:
  - host: connor.zip
    http:
      paths:
      - backend:
          service:
            name: links
            port:
              name: web
        path: /l/
        pathType: Prefix
